--- a/plugin/src/plugin.yml
+++ b/plugin/src/plugin.yml
@@ -2,4 +2,5 @@ name: ASMPPowersPlugin
 version: 0.1
 author: Lebyy
 main: me.lebyy.asmppowersplugin.ASMPPowersPlugin
-api-version: 1.18
+api-version: 1.19
+depend: [ProtocolLib, GSit]
